feat(wip): adding nav-bar pieces
feat(wip): setting up main content

--- a/Layouts/reactjs/style.css
+++ b/Layouts/reactjs/style.css
@@ -1,5 +1,7 @@
 /* #61dafb */
 
+
+
 html {
   line-height: 1.15;
 }
@@ -17,10 +19,12 @@ a {
 header {
   display: block;
 }
+
 .container {
   background-color: lightgray;
   height: 100%;
 }
+
 .header-wrapper {
   background-color: #20232a;
   color: #ffffff;
@@ -31,12 +35,16 @@ header {
   left: 0;
 }
 
-.header {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
+@media (min-width:960px) {
+  .responsive-content {
+    max-width: 1260px;
+    width: 90%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}  
 
 .header-content {
   height: 60px;
@@ -116,9 +124,10 @@ nav {
     border-radius: 0.25rem;
 }
 
-header > .additional-content {
-  box-sizing: inherit;
+.additional-content {
+  width: calc(100% / 6);
 }
+
 .version-link {
   padding: 5px 10px;
   white-space: nowrap;
@@ -130,6 +139,12 @@ header > .additional-content {
   white-space: nowrap;
   font-size: 14px;
 }
+
+.repo-link-icon {
+  margin-left: 5px;
+color: #6d6d6d;
+}
+
 .content {
   color: white;  
   background-color: #282c34;
@@ -145,4 +160,32 @@ header > .additional-content {
   bottom: 0;
   background-color: #20232a;
   width: 100%;
+}
+
+.main-content {
+  margin-top: 60px;
+}
+
+.welcome-container {
+  background-color: #282c34;
+  color: white;
+}
+
+.main-content > header {
+  padding-top: 95px;
+  padding-bottom: 85px;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.main-content > header > h1 {
+  font-size: 60px;
+  color: #61dafb;
+  text-align: center;
+}
+
+* {
+  box-sizing: inherit;
 }
