feat(wip): adding content css

--- a/Layouts/reactjs/index.html
+++ b/Layouts/reactjs/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,65 +8,63 @@
   <link rel="stylesheet" href="style.css">
   <title>React - A Javascript library for building user interfaces</title>
 </head>
+
 <body>
-<div class="container">
-  <header class="header-wrapper">
-    <div class="responsive-content">
-      <div class="header-content">
-        <a href="" class="logo">
-          <img src="./react-logo.svg" height="20" alt="React Logo">
-          <span>React</span>
-        </a>
-        <nav>
-          <a href="" class="nav-item">Docs</a>
-          <a href="" class="nav-item">Tutorial</a>
-          <a href="" class="nav-item">Community</a>
-          <a href="" class="nav-item">Blog</a>
-        </nav>
-        <form class="search-container">
-          <span>
-            <input type="search" placeholder="Search docs"/>
-          </span>
-        </form>
-        <div class="additional-content">
-          <a href="" class="version-link">v16.4.1</a>
-          <a href="" class="repo-link">Github
-            <img  src="./repo.svg" height="15" class="repo-link-icon" alt="Repository Link Icon">
+  <div class="container">
+    <header class="header-wrapper">
+      <div class="responsive-content">
+        <div class="header-content">
+          <a href="" class="logo">
+            <img src="./react-logo.svg" height="20" alt="React Logo">
+            <span>React</span>
           </a>
+          <nav>
+            <a href="" class="nav-item">Docs</a>
+            <a href="" class="nav-item">Tutorial</a>
+            <a href="" class="nav-item">Community</a>
+            <a href="" class="nav-item">Blog</a>
+          </nav>
+          <form class="search-container">
+            <span>
+              <input type="search" placeholder="Search docs" />
+            </span>
+          </form>
+          <div class="additional-content">
+            <a href="" class="version-link">v16.4.1</a>
+            <a href="" class="repo-link">Github
+              <img src="./repo.svg" height="15" class="repo-link-icon" alt="Repository Link Icon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="main-content responsive-content">
+      <header>
+        <h1>React</h1>
+        A JavaScript library for building user interfaces Get Started Take the Tutorial
+      </header>
+      <div class="summary-container">
+        <div class="summary">
+          <div class="summary-header">Declarative</div>
+          <p class="summary-content">React makes it painless to create interactive UIs. Design simple views for each state in your application, and
+            React will efficiently update and render just the right components when your data changes. Declarative views
+            make your code more predictable and easier to debug.</p>
+        </div>
+        <div class="summary">
+          <div class="summary-header">Component-Based</div>
+          <p class="summary-content">Build encapsulated components that manage their own state, then compose them to make complex UIs. Since component
+            logic is written in JavaScript instead of templates, you can easily pass rich data through your app and keep
+            state out of the DOM.</p>
+        </div>
+        <div class="summary">
+          <div class="summary-header">Learn Once, Write Anywhere</div>
+          <p class="summary-content">We don’t make assumptions about the rest of your technology stack, so you can develop new features in React without
+            rewriting existing code. React can also render on the server using Node and power mobile apps using React Native.</p>
         </div>
       </div>
     </div>
-  </header>
-  <div class="main-content responsive-content"> 
-      <header>
-        <h1>React</h1>
-        A JavaScript library for building user interfaces
-        
-        Get Started
-        Take the Tutorial
-      </header>
-    <div class="summary-container">
-      <div class="summary">
-        <div class="summary-header">Declarative</div>
-        <p class="summary-content">React makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render just the right components when your data changes.
-
-            Declarative views make your code more predictable and easier to debug.</p>
-      </div>
-      <div class="summary">
-        <div class="summary-header">Component-Based</div>
-        <p class="summary-content">Build encapsulated components that manage their own state, then compose them to make complex UIs.
-
-            Since component logic is written in JavaScript instead of templates, you can easily pass rich data through your app and keep state out of the DOM.</p>
-      </div>
-      <div class="summary">
-        <div class="summary-header">Learn Once, Write Anywhere</div>
-        <p class="summary-content">We don’t make assumptions about the rest of your technology stack, so you can develop new features in React without rewriting existing code.
-
-            React can also render on the server using Node and power mobile apps using React Native.</p>
-      </div>
-    </div>
+    <div class="footer">Footer</div>
   </div>
-  <div class="footer">Footer</div>
-</div>
 </body>
+
 </html>
