--- a/Layouts/reactjs/style.css
+++ b/Layouts/reactjs/style.css
@@ -1,7 +1,5 @@
 /* #61dafb */
 
-
-
 html {
   line-height: 1.15;
 }
@@ -35,17 +33,6 @@ header {
   left: 0;
 }
 
-@media (min-width:960px) {
-  .responsive-content {
-    max-width: 1260px;
-    width: 90%;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}  
-
 .header-content {
   height: 60px;
   display: flex;
@@ -73,7 +60,7 @@ nav {
   font-weight: 300;
 }
 
-.logo { 
+.logo {
   width: calc(100% / 6);
   display: flex;
   align-items: center;
@@ -95,15 +82,18 @@ nav {
 }
 
 .search-container {
-  width: calc(100% / 6);
-  margin-right: 10px;
+  margin-right: 30px;
+  min-width: 120px;
+  overflow-x: hidden;
 }
 
 .search-container > span {
   position: relative;
   display: inline-block;
 }
+
 .search-container > span > input {
+  width: 100%;
   background: transparent;
   border: 0;
   color: #ffffff;
@@ -120,12 +110,13 @@ nav {
 
 .search-container > span > input:focus {
   outline: 0;
-    background-color: #373940;
-    border-radius: 0.25rem;
+  background-color: #373940;
+  border-radius: 0.25rem;
 }
 
 .additional-content {
   width: calc(100% / 6);
+  white-space: nowrap;
 }
 
 .version-link {
@@ -142,11 +133,11 @@ nav {
 
 .repo-link-icon {
   margin-left: 5px;
-color: #6d6d6d;
+  color: #6d6d6d;
 }
 
 .content {
-  color: white;  
+  color: white;
   background-color: #282c34;
   height: 1000px;
 }
@@ -178,6 +169,7 @@ color: #6d6d6d;
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  background-color: #282c34;
 }
 
 .main-content > header > h1 {
@@ -188,4 +180,31 @@ color: #6d6d6d;
 
 * {
   box-sizing: inherit;
+}
+
+@media (min-width: 960px) {
+  .responsive-content {
+    max-width: 1260px;
+    width: 90%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 1339px) and (min-width: 780px) {
+  .search-container {
+    width: calc(100% / 6);
+  }
+}
+
+@media (max-width: 779px) {
+  .search-container {
+    margin-left: 20px;
+  }
+
+  .additional-content {
+    visibility: hidden;
+  }
 }
