feat: adding summary
fix: inlining svgs

--- a/Layouts/reactjs/index.html
+++ b/Layouts/reactjs/index.html
@@ -32,35 +32,65 @@
           <div class="additional-content">
             <a href="" class="version-link">v16.4.1</a>
             <a href="" class="repo-link">Github
-              <img src="./repo.svg" height="15" class="repo-link-icon" alt="Repository Link Icon">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="css-19vhmgv">
+                <path fill="currentColor" d="
+                  M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                  0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                "></path>
+                <polygon fill="currentColor" points="
+                  45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                  14.9 62.8,22.9 71.5,22.9
+                  "></polygon>
+              </svg>
             </a>
           </div>
         </div>
       </div>
     </header>
-    <div class="main-content responsive-content">
+    <div class="main-content">
       <header>
         <h1>React</h1>
-        A JavaScript library for building user interfaces Get Started Take the Tutorial
+        <p class="responsive-content">
+          A JavaScript library for building user interfaces
+        </p>
+        <div class="main-links">
+          <div left>
+            <a href="">Get Started</a>
+          </div>
+          <div right>
+            <a href="">Take the Tutorial
+              <svg height="12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4.53657 8.69699" class="css-b7q1rs">
+                <path d="
+                  M.18254,8.697a.18149.18149,0,0,1-.12886-.31034L4.09723,4.34126.05369.29954a.18149.18149,
+                  0,0,1,.2559-.2559L4.4838,4.21785a.18149.18149,0,0,1,0,.2559L.30958,8.648A.18149.18149,
+                  0,0,1,.18254,8.697Z
+                " fill="currentColor"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
       </header>
-      <div class="summary-container">
-        <div class="summary">
-          <div class="summary-header">Declarative</div>
-          <p class="summary-content">React makes it painless to create interactive UIs. Design simple views for each state in your application, and
-            React will efficiently update and render just the right components when your data changes. Declarative views
-            make your code more predictable and easier to debug.</p>
-        </div>
-        <div class="summary">
-          <div class="summary-header">Component-Based</div>
-          <p class="summary-content">Build encapsulated components that manage their own state, then compose them to make complex UIs. Since component
-            logic is written in JavaScript instead of templates, you can easily pass rich data through your app and keep
-            state out of the DOM.</p>
-        </div>
-        <div class="summary">
-          <div class="summary-header">Learn Once, Write Anywhere</div>
-          <p class="summary-content">We don’t make assumptions about the rest of your technology stack, so you can develop new features in React without
-            rewriting existing code. React can also render on the server using Node and power mobile apps using React Native.</p>
-        </div>
+      <div class="summary-container responsive-content">
+        <section>
+          <div class="summary">
+            <h3>Declarative</h3>
+            <p class="summary-content">React makes it painless to create interactive UIs. Design simple views for each state in your application, and
+              React will efficiently update and render just the right components when your data changes.</p>
+            <p>Declarative views make your code more predictable and easier to debug.</p>
+          </div>
+          <div class="summary">
+            <h3>Component-Based</h3>
+            <p class="summary-content">Build encapsulated components that manage their own state, then compose them to make complex UIs.</p>
+            <p>Since component logic is written in JavaScript instead of templates, you can easily pass rich data through your
+              app and keep state out of the DOM.</p>
+          </div>
+          <div class="summary">
+            <h3>Learn Once, Write Anywhere</h3>
+            <p class="summary-content">We don’t make assumptions about the rest of your technology stack, so you can develop new features in React without
+              rewriting existing code.</p>
+            <p>React can also render on the server using Node and power mobile apps using React Native.</p>
+          </div>
+        </section>
       </div>
     </div>
     <div class="footer">Footer</div>
