--- a/Layouts/reactjs/style.css
+++ b/Layouts/reactjs/style.css
@@ -3,6 +3,7 @@
 html {
   line-height: 1.15;
 }
+
 body {
   background-color: gray;
   font-family: "Segoe UI", "Roboto", "sans-serif";
@@ -19,7 +20,7 @@ header {
 }
 
 .container {
-  background-color: lightgray;
+  background-color: white;
   height: 100%;
 }
 
@@ -50,6 +51,7 @@ nav {
 }
 
 .nav-item {
+  font-size: 18px;
   color: white;
   text-decoration: none;
   padding: 0px 15px;
@@ -163,19 +165,104 @@ nav {
 }
 
 .main-content > header {
+  width: 100%;
   padding-top: 95px;
   padding-bottom: 85px;
-  max-width: 1500px;
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   background-color: #282c34;
 }
 
 .main-content > header > h1 {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 60px;
   color: #61dafb;
   text-align: center;
+}
+
+.main-content > header > p {
+  text-align: center;
+  font-size: 30px;
+  padding-top: 20px;
+  color: white;
+  font-weight: 200;
+}
+.main-links {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+}
+
+div[left] {
+  text-align: right;
+  padding-right: 15px;
+  width: 50%;
+}
+
+div[left] > a {
+  display: inline-block;
+  font-size: 20px;
+  background-color: #61dafb;
+  color: #000000;
+  padding: 10px 25px;
+  white-space: nowrap;
+  transition: background-color 0.2s ease-out;
+}
+
+div[left] > a:hover {
+  background-color: white;
+}
+
+div[right] > a:hover {
+  color: white;
+}
+
+div[right] > img:hover {
+  color: white;
+}
+
+div[right] {
+  padding-left: 15px;
+  width: 50%;
+}
+
+div[right] > a {
+  display: inline-block;
+  font-size: 20px;
+  color: #61dafb;
+  transition: color 0.2s ease-out;
+}
+
+section {
+  line-height: 25px;
+  margin-top: 60px;
+  margin-bottom: 65px;
+  display: flex;
+  flex-direction: row;
+}
+
+.summary {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 33%;
+  margin-left: 40px;
+}
+summary:first-of-type{
+  margin-left: 0px;
+}
+
+.summary > h3 {
+  margin-bottom: 20px;
+  color: #6d6d6d;
+  padding-top: 0;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.summary > p {
+  font-size: 17px;
+    line-height: 1.7;
 }
 
 * {
@@ -191,6 +278,10 @@ nav {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+@media (min-width: 780px) {
+  width: 90%;
 }
 
 @media (max-width: 1339px) and (min-width: 780px) {
