feat: adding fancy hover transitions

--- a/Layouts/reactjs/index.html
+++ b/Layouts/reactjs/index.html
@@ -19,10 +19,10 @@
             <span>React</span>
           </a>
           <nav>
-            <a href="" class="nav-item">Docs</a>
-            <a href="" class="nav-item">Tutorial</a>
-            <a href="" class="nav-item">Community</a>
-            <a href="" class="nav-item">Blog</a>
+            <a href="" class="fancy nav-item">Docs</a>
+            <a href="" class="fancy nav-item">Tutorial</a>
+            <a href="" class="fancy nav-item">Community</a>
+            <a href="" class="fancy nav-item">Blog</a>
           </nav>
           <form class="search-container">
             <span>
@@ -30,9 +30,9 @@
             </span>
           </form>
           <div class="additional-content">
-            <a href="" class="version-link">v16.4.1</a>
-            <a href="" class="repo-link">Github
-              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="css-19vhmgv">
+            <a href="" class="fancy version-link">v16.4.1</a>
+            <a href="" class="fancy repo-link">Github
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
                 <path fill="currentColor" d="
                   M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
                   0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
@@ -59,7 +59,7 @@
           </div>
           <div right>
             <a href="">Take the Tutorial
-              <svg height="12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4.53657 8.69699" class="css-b7q1rs">
+              <svg height="12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4.53657 8.69699">
                 <path d="
                   M.18254,8.697a.18149.18149,0,0,1-.12886-.31034L4.09723,4.34126.05369.29954a.18149.18149,
                   0,0,1,.2559-.2559L4.4838,4.21785a.18149.18149,0,0,1,0,.2559L.30958,8.648A.18149.18149,
