--- a/Layouts/reactjs/index.html
+++ b/Layouts/reactjs/index.html
@@ -94,7 +94,129 @@
         </section>
       </div>
     </div>
-    <div class="footer">Footer</div>
+    <section class="bottom-section main-links">
+      <div left>
+        <a href="">Get Started</a>
+      </div>
+      <div right>
+        <a href="">Take the Tutorial
+          <svg height="12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4.53657 8.69699">
+            <path d="
+              M.18254,8.697a.18149.18149,0,0,1-.12886-.31034L4.09723,4.34126.05369.29954a.18149.18149,
+              0,0,1,.2559-.2559L4.4838,4.21785a.18149.18149,0,0,1,0,.2559L.30958,8.648A.18149.18149,
+              0,0,1,.18254,8.697Z
+            " fill="currentColor"></path>
+          </svg>
+        </a>
+      </div>
+  </div>
+  <footer>
+    <div class="footer-container responsive-content">
+      <div class="footer-content">
+        <div class="links">
+          <div class="links-container">
+            <div class="links-content">
+              <div class="link-header">Docs</div>
+              <div class="link">Installation</div>
+              <div class="link">Main Concepts</div>
+              <div class="link">Advanced Guides</div>
+              <div class="link">API Reference</div>
+              <div class="link">Contributing</div>
+              <div class="link">FAQ</div>
+            </div>
+            <div class="links-content">
+              <div class="link-header">Channels</div>
+              <a href="" class="fancy repo-link">GitHub
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+              <a href="" class="fancy repo-link link">Stack Overflow
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+              <a href="" class="fancy repo-link link">Discussion Forum
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+              <a href="" class="fancy repo-link link">Reactiflux Chat
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+              <a href="" class="fancy repo-link link">Facebook
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+              <a href="" class="big fancy repo-link">Twitter
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15">
+                  <path fill="currentColor" d="
+                    M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,
+                    0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z
+                  "></path>
+                  <polygon fill="currentColor" points="
+                    45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,
+                    14.9 62.8,22.9 71.5,22.9
+                    "></polygon>
+                </svg>
+              </a>
+            </div>
+            <div class="links-content">
+              <div class="link-header">Community</div>
+              <div class="link">Community Resources</div>
+              <div class="link">Tools</div>
+            </div>
+            <div class="links-content">
+              <div class="link-header">More</div>
+              <div class="link">Tutorial</div>
+              <div class="link">Blog</div>
+              <div class="link">Acknowledgements</div>
+              <div class="link">React Native</div>
+            </div>
+          </div>
+        </div>
+        <section></section>
+      </div>
+    </div>
+  </footer>
   </div>
 </body>
 
