--- a/Layouts/reactjs/style.css
+++ b/Layouts/reactjs/style.css
@@ -208,6 +208,14 @@ color: #6d6d6d;
   padding-top: 40px;
 }
 
+.bottom-section {
+  background: #282c34;
+  color: #ffffff;
+  padding-top: 45px;
+  padding-bottom: 45px;
+  margin-bottom: 0px;
+}
+
 div[left] {
   text-align: right;
   padding-right: 15px;
@@ -278,6 +286,54 @@ summary:first-of-type{
   font-size: 17px;
     line-height: 1.7;
 }
+
+footer {
+  background-color: #20232a;
+  color: #ffffff;
+  padding-top: 10px;
+  padding-bottom: 50px;
+}
+
+.footer-container {
+
+}
+.footer-content {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+.links {
+  width: calc(100% / 3 * 2);
+  padding-left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.links-container {
+  display: flex;
+  width: 50%;
+  padding-top: 40px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.links-content {
+  display: flex;
+  display: inline-flex;
+  flex-direction: column;
+}
+.link-header{
+  color: #999;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 3;
+  text-transform: uppercase;
+  letter-spacing: 0.08em;
+}
+
+.big {
+  line-height: 2;
+}
+
+
 
 * {
   box-sizing: inherit;
